fix large gaps in between gfys

--- a/public/css/touches.css
+++ b/public/css/touches.css
@@ -21,5 +21,4 @@
 
 .video {
     max-width: 100%;
-    height: fit-content;
 }
